[gd_scene load_steps=2 format=3 uid="uid://cwq0f5q6ef0vn"]

[ext_resource type="Script" path="res://Control.gd" id="1_ecra4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ecra4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.35, 0.35, 0.35, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="DirectoryContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 5

[node name="TextEdit" type="CodeEdit" parent="ColorRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
minimap_draw = true
draw_tabs = true
draw_spaces = true
gutters_draw_line_numbers = true
gutters_zero_pad_line_numbers = true
code_completion_enabled = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[node name="ButtonContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="NewButton" type="Button" parent="ColorRect/MarginContainer/HBoxContainer/ButtonContainer"]
layout_mode = 2
text = "New"

[node name="SaveButton" type="Button" parent="ColorRect/MarginContainer/HBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Save"

[node name="SaveAsButton" type="Button" parent="ColorRect/MarginContainer/HBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Save As"

[node name="DeleteButton" type="Button" parent="ColorRect/MarginContainer/HBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Delete"

[node name="ReloadButton" type="Button" parent="ColorRect/MarginContainer/HBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Reload
"

[node name="SaveFileDialog" type="FileDialog" parent="ColorRect"]
title = "Save File As"
size = Vector2i(702, 500)
access = 2
root_subfolder = "/media/elviin/6C1A0CCD1A0C95EC"

[connection signal="pressed" from="ColorRect/MarginContainer/HBoxContainer/ButtonContainer/NewButton" to="." method="_on_new_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/HBoxContainer/ButtonContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/HBoxContainer/ButtonContainer/SaveAsButton" to="." method="_on_save_as_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/HBoxContainer/ButtonContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/HBoxContainer/ButtonContainer/ReloadButton" to="." method="_on_reload_button_pressed"]
[connection signal="file_selected" from="ColorRect/SaveFileDialog" to="." method="_on_save_file_dialog_file_selected"]
